--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "payment-manager-app",
+  "name": "telegram-ecommerce-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
